# autoencoder-recommender

./: Dockerfile  README.md  pyproject.toml  test.ipynb  test.py
.devcontainer/: devcontainer.json
autoencoder-recommender/tasks/: download_external_data.py
