[tool.poetry]
name = "autoencoder-recommender"
version = "0.1.0"
description = "Autoencoder recommendation model"
authors = ["leofmr <leonardo@moutinho.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{include = "autoencoder_recommender"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.analysis.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
