[tool.poetry]
name = "autoencoder-recommender"
version = "0.1.0"
description = "Autoencoder recommendation model"
authors = ["leofmr <leonardo@moutinho.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{include = "autoencoder_recommender"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
types-tqdm = "^4.66.0.1"
types-requests = "^2.31.0.2"

[tool.poetry.group.analysis.dependencies]
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
